# unity-res-ref

./: .coverage  .pre-commit-config.yaml  README.md  TECHNICAL_DESIGN.md  USAGE.md  coverage.xml  demo_meta_parser.py  main.py  pyproject.toml  pytest.ini  unity_deps.db-shm  unity_deps.db-wal
.github/: copilot-instructions.md
.task-manager/data/unity-res-ref/: tasks.json
.task-manager/data/unity-res-ref/memory/: tasks_memory_2025-07-31T16-30-38.json
config/: default.yaml  schema.json
dev_log/: README.md  task_01_project_setup.md  task_02_config_system.md  task_03_database_models.md  task_04_meta_parser.md  task_05_file_scanner.md  task_06_prefab_scene_parser.md  task_07_dependency_graph_core.md  task_08_graph_builder.md  task_09_dependency_queries.md  task_10_reference_queries.md  task_11_file_refactoring.md  task_12_circular_dependency_analysis.md  task_13_graph_incremental_updates.md
docs/: api.md  user_guide.md
examples/: circular_dependency_demo.py
output/: circular_dependency_report_20250801_022244.json  circular_dependency_report_20250801_022244.md  circular_dependency_report_20250801_022244.txt
src/: __init__.py
src/api/: __init__.py
src/cli/: __init__.py  commands.py
src/core/: __init__.py  circular_dependency_analyzer.py  config.py  database.py  dependency_graph.py  dependency_graph_backup.py  dependency_queries.py  graph_builder.py  graph_update_manager.py  query_types.py  reference_queries.py  scanner.py
src/models/: __init__.py  asset.py  dependency.py  scan_result.py
src/parsers/: __init__.py  base_parser.py  meta_parser.py  prefab_parser.py  scene_parser.py
src/utils/: __init__.py  file_watcher.py  path_utils.py  yaml_utils.py
tests/: __init__.py
tests/integration/: test_file_scanner_integration.py  test_meta_parser_integration.py
tests/unit/: test_circular_dependency_analyzer.py  test_config.py  test_database.py  test_file_scanner.py  test_graph_update_manager.py  test_meta_parser.py  test_prefab_parser.py  test_project_structure.py  test_scene_parser.py  test_yaml_utils.py
